2007-10-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Add a --clutter-default-fps run-time
	switch and CLUTTER_DEFAULT_FPS environment variable support for
	setting the default frame-rate at run-time.

2007-10-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.h:
	* clutter/clutter-script.c: Add a ::get_type_from_name() virtual
	function for bindings to override. The current implementation
	calls g_type_from_name() and our lazy class resolver.

	* clutter.symbols: Update.

	* doc/reference/clutter-sections.txt: Update.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Reverse the list of
	parsed knots, to preserve the real ordering after prepending
	them (thanks to Øyvind for spotting this).

	* clutter/clutter-behaviour-bspline.c: Ditto as above.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-parser.c: Unset the GValue when
	getting a ClutterUnit from a JSON node.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-bspline.c: Implement the
	ClutterScriptableIface to parse the custom "knots" property.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-script.c:
	* tests/test-script.json: Rejig the test case and add a
	path behaviour to test the knot parsing code.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/cogl/cogl.h: Do not include <clutter/clutter.h>.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Implement the
	ClutterScriptableIface to parse the custom "knots" property.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-texture.c (clutter_texture_set_property): Do
	not try to set NULL pixbufs.

2007-10-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Implement part of the ClutterScriptable
	interface, using the ClutterActor API to set and get the name
	of an actor.
